Move to Stiches CSS

--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@emotion/styled": "^11.8.1",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-icons": "^1.1.1",
+    "@radix-ui/react-separator": "^1.0.0",
+    "@radix-ui/react-tooltip": "^1.0.0",
     "@types/styled-system": "^5.1.15",
     "lodash.get": "^4.4.2",
     "lodash.merge": "^4.6.2",
     "next": "12.1.5",
+    "next-themes": "^0.2.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-helmet": "^6.1.0",
