--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-icons": "^1.1.1",
     "@radix-ui/react-separator": "^1.0.0",
     "@radix-ui/react-tooltip": "^1.0.0",
+    "@stitches/react": "^1.2.8",
     "@types/styled-system": "^5.1.15",
     "lodash.get": "^4.4.2",
     "lodash.merge": "^4.6.2",
