Add NextAuth integration

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/react-avatar": "^1.0.0",
     "@radix-ui/react-icons": "^1.1.1",
     "@radix-ui/react-separator": "^1.0.0",
     "@radix-ui/react-tooltip": "^1.0.0",
@@ -21,6 +22,7 @@
     "lodash.get": "^4.4.2",
     "lodash.merge": "^4.6.2",
     "next": "12.1.5",
+    "next-auth": "^4.10.3",
     "next-themes": "^0.2.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
