--- a/package.json
+++ b/package.json
@@ -1,43 +1,53 @@
 {
-  "name": "next-starter",
+  "name": "next-starter2",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "next dev",
+    "postinstall": "prisma generate",
+    "lint": "next lint",
+    "start": "next start"
   },
   "dependencies": {
-    "@emotion/css": "^11.9.0",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
+    "@next-auth/prisma-adapter": "^1.0.4",
+    "@prisma/client": "^4.5.0",
     "@radix-ui/colors": "^0.1.8",
-    "@radix-ui/react-avatar": "^1.0.0",
+    "@radix-ui/react-avatar": "^1.0.1",
     "@radix-ui/react-icons": "^1.1.1",
-    "@radix-ui/react-separator": "^1.0.0",
-    "@radix-ui/react-tooltip": "^1.0.0",
+    "@radix-ui/react-separator": "^1.0.1",
+    "@radix-ui/react-tooltip": "^1.0.2",
     "@stitches/react": "^1.2.8",
-    "@types/styled-system": "^5.1.15",
-    "lodash.get": "^4.4.2",
-    "lodash.merge": "^4.6.2",
-    "next": "12.1.5",
-    "next-auth": "^4.10.3",
-    "next-themes": "^0.2.0",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-helmet": "^6.1.0",
-    "styled-system": "^5.1.5"
+    "@tanstack/react-query": "^4.10.0",
+    "@trpc/client": "10.0.0-rc.4",
+    "@trpc/next": "10.0.0-rc.4",
+    "@trpc/react-query": "10.0.0-rc.4",
+    "@trpc/server": "10.0.0-rc.4",
+    "next": "13.0.2",
+    "next-auth": "^4.15.1",
+    "next-themes": "^0.2.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "superjson": "1.9.1",
+    "zod": "^3.18.0"
   },
   "devDependencies": {
-    "@types/lodash.get": "^4.4.7",
-    "@types/lodash.merge": "^4.6.7",
-    "@types/node": "17.0.29",
-    "@types/react": "18.0.8",
-    "@types/react-dom": "18.0.0",
-    "@types/react-helmet": "^6.1.5",
-    "eslint": "8.14.0",
-    "eslint-config-next": "12.1.5",
-    "typescript": "4.6.3"
+    "@types/node": "^18.0.0",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
+    "@typescript-eslint/eslint-plugin": "^5.33.0",
+    "@typescript-eslint/parser": "^5.33.0",
+    "autoprefixer": "^10.4.7",
+    "eslint": "^8.26.0",
+    "eslint-config-next": "13.0.2",
+    "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
+    "prisma": "^4.5.0",
+    "tailwindcss": "^3.2.0",
+    "typescript": "^4.8.4"
+  },
+  "ct3aMetadata": {
+    "initVersion": "6.10.1"
   }
 }
