--- a/.env
+++ b/.env
@@ -1,4 +1,14 @@
-GITHUB_ID=748f44f233b4cec9ff8c
-GITHUB_SECRET=
-NEXT_PUBLIC_SECRET=d0c278c5a3e715744c789727bea6d2d3
-NEXTAUTH_URL="http://localhost:3000"
+# When adding additional env variables, the schema in /env/schema.mjs should be updated accordingly
+
+# Prisma
+DATABASE_URL=file:./db.sqlite
+
+# Next Auth
+# You can generate the secret via 'openssl rand -base64 32' on Linux
+# More info: https://next-auth.js.org/configuration/options#secret
+NEXTAUTH_SECRET=asdfghjkl
+NEXTAUTH_URL=http://localhost:3000
+
+# Next Auth Discord Provider
+DISCORD_CLIENT_ID=
+DISCORD_CLIENT_SECRET=
