--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "script:create-tailwind-colors": "ts-node create-tailwind-colors.mjs"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.4",
@@ -23,12 +24,14 @@
     "@trpc/next": "10.0.0-rc.4",
     "@trpc/react-query": "10.0.0-rc.4",
     "@trpc/server": "10.0.0-rc.4",
+    "classnames": "^2.3.2",
     "next": "13.0.2",
     "next-auth": "^4.15.1",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.9.1",
+    "ts-node": "^10.9.1",
     "zod": "^3.18.0"
   },
   "devDependencies": {
