--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start",
-    "script:create-tailwind-colors": "ts-node scripts/create-tailwind-colors.mjs"
+    "script:create-tailwind-colors": "node scripts/create-tailwind-colors.mjs",
+    "script:colors": "node scripts/colors.mjs"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.4",
