--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "next-starter2",
+  "name": "next-starter",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "build": "next build",
     "dev": "next dev",
     "postinstall": "prisma generate",
+    "prisma:migrate:dev": "prisma migrate dev",
+    "prisma:migrate": "prisma migrate",
     "lint": "next lint",
     "start": "next start",
     "script:create-tailwind-colors": "node scripts/create-tailwind-colors.mjs",
@@ -50,8 +52,5 @@
     "prisma": "^4.5.0",
     "tailwindcss": "^3.2.0",
     "typescript": "^4.8.4"
-  },
-  "ct3aMetadata": {
-    "initVersion": "6.10.1"
   }
 }
