--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.9.1",
+    "tailwind-merge": "^1.8.0",
     "ts-node": "^10.9.1",
     "zod": "^3.18.0"
   },
