--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@radix-ui/react-separator": "^1.0.1",
     "@radix-ui/react-tooltip": "^1.0.2",
     "@stitches/react": "^1.2.8",
+    "@tailwindcss/typography": "^0.5.9",
     "@tanstack/react-query": "^4.10.0",
     "@trpc/client": "10.0.0-rc.4",
     "@trpc/next": "10.0.0-rc.4",
     "@trpc/react-query": "10.0.0-rc.4",
     "@trpc/server": "10.0.0-rc.4",
     "classnames": "^2.3.2",
+    "daisyui": "^2.47.0",
     "next": "13.0.2",
     "next-auth": "^4.15.1",
     "next-themes": "^0.2.1",
