--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@trpc/server": "10.0.0-rc.4",
     "classnames": "^2.3.2",
     "daisyui": "^2.47.0",
+    "lucide-react": "^0.108.0",
     "next": "13.0.2",
     "next-auth": "^4.15.1",
     "next-themes": "^0.2.1",
