--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-t3-app",
+  "name": "next-starter",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -50,8 +50,5 @@
     "prisma": "^4.9.0",
     "tailwindcss": "^3.2.0",
     "typescript": "^4.9.4"
-  },
-  "ct3aMetadata": {
-    "initVersion": "7.5.6"
   }
 }
