--- a/.env.example
+++ b/.env.example
@@ -11,15 +11,15 @@
 
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
-DATABASE_URL="file:./db.sqlite"
+# DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres"
 
 # Next Auth
 # You can generate a new secret on the command line with:
 # openssl rand -base64 32
 # https://next-auth.js.org/configuration/options#secret
 # NEXTAUTH_SECRET=""
-NEXTAUTH_URL="http://localhost:3000"
+# NEXTAUTH_URL="http://localhost:3000"
 
 # Next Auth Discord Provider
-DISCORD_CLIENT_ID=""
-DISCORD_CLIENT_SECRET=""
+# DISCORD_CLIENT_ID=""
+# DISCORD_CLIENT_SECRET=""
