--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "next build",
     "dev": "next dev",
     "postinstall": "prisma generate",
+    "migrate": "prisma migrate dev",
     "lint": "next lint",
     "start": "next start"
   },
