--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^4.9.0",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-avatar": "^1.0.2",
+    "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-separator": "^1.0.1",
     "@radix-ui/react-tooltip": "^1.0.4",
     "@tailwindcss/typography": "^0.5.9",
