--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "lucide-react": "^0.259.0",
     "next": "^13.4.1",
     "next-auth": "^4.21.0",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-day-picker": "^8.8.0",
     "react-dom": "18.2.0",
