--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
     "drizzle-orm": "^0.28.5",
+    "embla-carousel-react": "^8.0.0-rc15",
     "next": "^14.0.3",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
@@ -61,11 +62,14 @@
     "react": "18.2.0",
     "react-day-picker": "^8.9.1",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.48.2",
+    "react-hook-form": "^7.49.2",
+    "react-resizable-panels": "^1.0.4",
     "server-only": "^0.0.1",
+    "sonner": "^1.2.4",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.8.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
